Prevent horizontal scroll with overflow hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,8 @@ html, body {
     height: 100%;
     margin: 0;
     font-family: 'Work Sans', sans-serif;
-
+    max-width: 100%;
+    overflow-x: hidden;
 }
 body {
     display: flex;
